--- a/synthtranslatorapp/app/build.gradle
+++ b/synthtranslatorapp/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation files('libs/json-simple-1.1.1.jar')
+    implementation files('libs/tarsosdsp/TarsosDSP-latest.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
