--- a/synthtranslatorapp/app/build.gradle
+++ b/synthtranslatorapp/app/build.gradle
@@ -37,6 +37,10 @@ android {
 }
 
 dependencies {
+// Java language implementation
+    implementation("androidx.fragment:fragment:1.5.7")
+    // Kotlin
+    implementation("androidx.fragment:fragment-ktx:1.5.7")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
